pulse-agent-plugins 1.4
=========================

 * 


pulse-agent-plugins 1.3
=========================

 * Improve deployment plugin
 * Improve reversessh plugin
 * Fix reading of Windows registry keys for 64bit architectures
 * New guacamole plugin